white gap fix attempt no 6

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ footer{
     font-family: "Roboto",sans-serif;
     font-style: normal;
     font-weight: 150;
-    margin-top: 20px;
+    margin: 0;
     padding: 10px;
 
 }
